--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
 body {
-  background-color: aqua;
+  /* background-color: #3B3E3E; */
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDlUbxZLFT1S7aOQgpvAPq9dtmipjVsHZ8wxk5qhLORBbqqVJtDA") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  /* background-repeat: no-repeat; */
+
   font-family: 'Playfair Display SC', serif;
 }
 
@@ -8,11 +15,189 @@ nav {
 }
 
 .header {
-  background-color: #DAF7A6;
+  background-color: #D7FDFD;
+  position: relative;
+  top: 250px;
+  min-height:230px;
+  padding-top: 30px;
+  border: 5px solid black;
+  border-radius: 20px;
+  /* margin-top: 30px; */
 }
 
 h1,h3 {
   font-family: 'Krona One', sans-serif;
+  color: white;
   margin: auto;
   text-align: center;
+}
+
+h1 {
+  font-size: 60px;
+  margin-top: 50px;
+  margin-bottom: 200px;
+}
+
+p {
+  color: white;
+  font-size: 22px;
+  text-align: center;
+}
+
+.about-me {
+font-size: 18px;
+letter-spacing: 1.4px;
+}
+
+h2, h4, ul {
+  color: white;
+}
+
+.portrait {
+  height: 45px;
+  width: 45px;
+}
+
+.project {
+  background-color: gray;
+  padding: 50px;
+  margin: 30px 20px;
+}
+
+
+.text-block {
+  margin: 15px;
+  padding: 15px;
+}
+
+.wrapper {
+  text-align: center;
+}
+
+/*Horizontal Sliding*/
+.slidingHorizontal{
+	display: inline;
+	text-indent: 8px;
+}
+.slidingHorizontal span{
+	animation: leftToRight 12.5s linear infinite 0s;
+	-ms-animation: leftToRight 12.5s linear infinite 0s;
+	-webkit-animation: leftToRight 12.5s linear infinite 0s;
+	color: white;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+.slidingHorizontal span:nth-child(2){
+	animation-delay: 2.5s;
+	-ms-animation-delay: 2.5s;
+	-webkit-animation-delay: 2.5s;
+}
+.slidingHorizontal span:nth-child(3){
+	animation-delay: 5s;
+	-ms-animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+}
+.slidingHorizontal span:nth-child(4){
+	animation-delay: 7.5s;
+	-ms-animation-delay: 7.5s;
+	-webkit-animation-delay: 7.5s;
+}
+.slidingHorizontal span:nth-child(5){
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
+
+/*leftToRight Animation*/
+@-moz-keyframes leftToRight{
+	0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: translateX(-50px); }
+	10% { opacity: 1; -moz-transform: translateX(0px); }
+	25% { opacity: 1; -moz-transform: translateX(0px); }
+	30% { opacity: 0; -moz-transform: translateX(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-webkit-keyframes leftToRight{
+	0% { opacity: 0; }
+	5% { opacity: 0; -webkit-transform: translateX(-50px); }
+	10% { opacity: 1; -webkit-transform: translateX(0px); }
+	25% { opacity: 1; -webkit-transform: translateX(0px); }
+	30% { opacity: 0; -webkit-transform: translateX(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-ms-keyframes leftToRight{
+	0% { opacity: 0; }
+	5% { opacity: 0; -ms-transform: translateX(-50px); }
+	10% { opacity: 1; -ms-transform: translateX(0px); }
+	25% { opacity: 1; -ms-transform: translateX(0px); }
+	30% { opacity: 0; -ms-transform: translateX(50px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+
+/*Horizontal Flip*/
+.horizontalFlip{
+	display: inline;
+	text-indent: 8px;
+}
+.horizontalFlip span{
+	animation: horizontal 12.5s linear infinite 0s;
+	-ms-animation: horizontal 12.5s linear infinite 0s;
+	-webkit-animation: horizontal 12.5s linear infinite 0s;
+	color: #00abe9;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+.horizontalFlip span:nth-child(2){
+	animation-delay: 2.5s;
+	-ms-animation-delay: 2.5s;
+	-webkit-animation-delay: 2.5s;
+}
+.horizontalFlip span:nth-child(3){
+	animation-delay: 5s;
+	-ms-animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+}
+.horizontalFlip span:nth-child(4){
+	animation-delay: 7.5s;
+	-ms-animation-delay: 7.5s;
+	-webkit-animation-delay: 7.5s;
+}
+.horizontalFlip span:nth-child(5){
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
+
+/*Horizontal Flip Animation*/
+@-moz-keyframes horizontal{
+	0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: rotateY(180deg); }
+	10% { opacity: 1; -moz-transform: translateX(0px); }
+	25% { opacity: 1; -moz-transform: translateX(0px); }
+	30% { opacity: 0; -moz-transform: translateX(0px); }
+	80% { opacity: 0; }
+	100% { opacity: 0;}
+}
+@-webkit-keyframes horizontal{
+	0% { opacity: 0; }
+	5% { opacity: 0; -webkit-transform: rotateY(180deg); }
+	10% { opacity: 1; -webkit-transform: translateX(0px); }
+	25% { opacity: 1; -webkit-transform: translateX(0px); }
+	30% { opacity: 0; -webkit-transform: translateX(0px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-ms-keyframes horizontal{
+	0% { opacity: 0; }
+	5% { opacity: 0; -ms-transform: rotateY(180deg); }
+	10% { opacity: 1; -ms-transform: translateX(0px); }
+	25% { opacity: 1; -ms-transform: translateX(0px); }
+	30% { opacity: 0; -ms-transform: translateX(0px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
 }
